# scratchattach

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLOUD_REQUESTS.md  CONTRIBUTING.md  LICENSE  README.md  _cloud.py  _exceptions.py  _project.py  _session.py  _studio.py  _user.py  pyproject.toml  requirements.txt  setup.py  vercel.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/PULL_REQUEST_TEMPLATE/: feature.md  feature.yml
.github/workflows/: deploy-website.yml  format.yml  pytest.yml  python-app.yml  release_test.yml
api/: app.py
api/source/: index.html
api/source/js/: loadCommunityProjects.js
assets/: Cloud Requests.sprite3  CloudRequests_Template.sb3  CloudStorage_Template.sb3  Encoder.sprite3
codegen/: README.md  __main__.py  features.md  main.py  pyproject.toml
codegen/test_codegen/: .codegen_config  codegen_config.json  test.py
codegen/test_codegen/async_out/: test.py
codegen/test_codegen/sync_out/: test.py
details/: tos.md
docs/: conf.py  index.rst  scratchattach.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  scratchattach.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  scratchattach.html  search.html  searchindex.js
scratch3/: __init__.py  _cloud.py  _cloud_requests.py  _encoder.py  _exceptions.py  _forum.py  _project.py  _session.py  _studio.py  _user.py
scratchattach/: __init__.py  __main__.py  _cloud.py  _cloud_requests.py  _encoder.py  _exceptions.py  _forum.py  _project.py  _session.py  _studio.py  _user.py  abstractscratch.py  activity.py  cloud.py  cloud_requests.py  cloud_server.py  comment.py  commons.py  encoder.py  exceptions.py  forum.py  logger.py  message_events.py  project.py  session.py  studio.py  test.py  textcolors.py  user.py
scratchattach/_core/: __init__.py  codegen_config.json
scratchattach/_core/primitives/: codegen_config.json  http.py  utils.py
scratchattach/_core/site/: _base.py  activity.py  backpack_asset.py  classroom.py  cloud_activity.py  codegen_config.json  comment.py  forum.py  project.py  session.py  studio.py  typed_dicts.py  user.py
scratchattach/_shared/: http.py
scratchattach/async_api/: README.md  __init__.py  commons.py  types.py
scratchattach/async_api/primitives/: http.py  utils.py
scratchattach/async_api/site/: _base.py  backpack_asset.py  comment.py  forum.py  project.py  session.py  studio.py  (+1 more)
scratchattach/cli/: __about__.py  __init__.py  context.py  db.py  namespace.py
scratchattach/cloud/: OUDATED.py  __init__.py  _base.py  cloud.py
scratchattach/editor/: __init__.py  asset.py  backpack_json.py  base.py  block.py  blockchain.py  blockshape.py  build_defaulting.py  comment.py  commons.py  extension.py  field.py  inputs.py  meta.py  monitor.py  mutation.py  pallete.py  prim.py  primitive.py  project.py  sbuild.py  sprite.py  todo.md  twconfig.py  vlb.py
scratchattach/eventhandlers/: _base.py  cloud_events.py  cloud_recorder.py  cloud_requests.py  cloud_requests_OLD.py  cloud_requests_async.py  cloud_server.py  cloud_storage.py  combine.py  filterbot.py  message_events.py
scratchattach/other/: other_apis.py  project_json_capabilities.py
scratchattach/site/: __init__.py  _base.py  activity.py  alert.py  backpack_asset.py  browser_cookie3_stub.py  browser_cookies.py  classroom.py  cloud_activity.py  comment.py  forum.py  placeholder.py  project.py  scratchblocks.py  scratchblocks_lang.py  session.py  studio.py  typed_dicts.py  user.py
scratchattach/utils/: commons.py  encoder.py  enums.py  exceptions.py  optional_async.py  requests.py  supportedlangs.py  typed_dicts.py
scratchattach/website/: app.py
scripts/: tw_desktop_cloud.js
tests/: README.md  pyproject.toml  pytest.ini  test1.py  test_activity.py  test_async_login.py  test_auth.py  test_backpack.py  test_classroom.py  test_comment.py  test_comment_by_id.py  test_editor_integration.py  test_editor_obfuscation.py  test_editor_project.py  test_import.py  test_mask.py  test_memberships.py  test_other_apis.py  test_project.py  test_search.py  test_session.py  test_studio.py  test_teacher_activity.py  test_user.py
tests/demo/: async_login.py
tests/src/util/: .gitignore  __init__.py  vercelauth.py
tests/util/: __init__.py  __main__.py  auth.toml  keyhandler.py
website/: app.py
website/source/: index.html
wiki/: cloud_requests.md  examples.md  get_your_session_id.md  home.md
(+36 files in other folders)
