[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "scratchattach"
version = "3.0.0b2"
authors = [{ name = "TimMcCool" }]
description = "A Scratch API Wrapper"
requires-python = ">= 3.12"
dependencies = [
  "websocket-client",
  "requests",
  "bs4",
  "SimpleWebSocketServer",
  "typing-extensions",
  "browser_cookie3",
  "aiohttp",
  "rich",
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
  "scratch api",
  "scratchattach",
  "scratch api python",
  "scratch python",
  "scratch for python",
  "scratch",
  "scratch cloud",
  "scratch cloud variables",
  "scratch bot",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Operating System :: Unix",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
]

[project.urls]
Source = "https://github.com/timmccool/scratchattach"
Homepage = "https://scratchattach.tim1de.net"

[project.scripts]
scratch = "scratchattach.__main__:main"

[project.optional-dependencies]
cli = ["rich-pixels"]
lark = ["lark"]

[tool.ruff]
line-length = 127
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
[tool.ruff.lint]
select = [
  "E9",
  "F63",
  "F7",
  "F82",
] # , "C901"]  # uncomment to re-enable mccabe complexity - see https://github.com/TimMcCool/scratchattach/issues/566

[tool.ruff.lint.mccabe]
# max-complexity = 10

[tool.setuptools.packages.find]
where = ["."]
include = ["scratchattach*"]

[dependency-groups]
dev = ["cryptography>=46.0.3", "pytest>=9.0.2"]
