[project]
name = "util"
version = "0.1.0"
description = "Test helpers for the scratchattach testing suite"
readme = "README.md"
authors = [{ name = "TimMcCool" }]
requires-python = ">=3.12.12"
dependencies = [
  "cryptography>=48.0.1",
  "pytest>=9.0.3",
  "python-dotenv>=1.2.2",
  "ruff>=0.15.18",
  "scratchattach",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
config-settings = { editable_mode = "compat" }

[tool.uv.sources]
scratchattach = { path = "../", editable = true }
