[project]
name = "util"
version = "0.1.0"
description = "Test helpers for the scratchattach testing suite"
readme = "README.md"
authors = [{ name = "TimMcCool" }]
requires-python = ">=3.12.12"
dependencies = [
  "cryptography>=49.0.0",
  "pytest>=9.1.1",
  "python-dotenv>=1.2.2",
  "ruff>=0.15.20",
  "scratchattach",
]

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
config-settings = { editable_mode = "compat" }

[tool.uv.sources]
scratchattach = { path = "../", editable = true }
